--- a/Client/src/components/footer/Footer.css
+++ b/Client/src/components/footer/Footer.css
@@ -25,7 +25,14 @@ footer {
     margin-bottom: 20px;
 }
 
-
+.kk{
+    width: 70vw !important;
+    margin: auto !important;
+}
+.FF{
+    text-align: center !important;
+    margin-bottom: 25px !important;
+}
 
 .fot-info ul li a {
     font-size: 15px;
