--- a/Client/src/components/home/Home.css
+++ b/Client/src/components/home/Home.css
@@ -226,3 +226,11 @@ section#welcome_Sec p {
     line-height: 30px;
 }
 
+
+  .h33{
+    font-size: 50px;
+    font-weight: 500;
+  }
+  .dd{
+    font-weight: bold;
+  }
