--- a/Client/src/components/about/About.css
+++ b/Client/src/components/about/About.css
@@ -3,21 +3,31 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    margin-top: 10px;
     background-color: rgb(245, 244, 244) !important;
 }
-
+.qq{
+    font-weight: bold;
+    margin-top: 40px;
+    color: rgb(7, 96, 108);
+}
 .card {
     background-color:   #c8d8db !important;
-    font-weight: 600;
+    font-weight: 500;
+  
     color: black !important;
     padding: 45px;
     margin-top: 20px;
     border-radius: 60px !important;
-    text-align: center;
+    text-align: left;
     width: 80%; /* Adjust width as needed */
     box-shadow: 0px 8px 4px rgba(2, 151, 250, 0.1); 
 }
+h2{
+    font-weight: bold !important;
+    text-align: center;
+}
 
 .jf {
-    font-size: 16px; 
+    font-size: 22px; 
     line-height: 1.6; }
