--- a/Client/src/components/header/Header.css
+++ b/Client/src/components/header/Header.css
@@ -1,11 +1,13 @@
 .header{
-    background-color:#c8d8db; 
+    background-color:#fafafa; 
   
-      width: 100%; /* Full width */
+      width: 100%; 
      
-      box-shadow: 0 4px 6px rgba(242, 239, 239, 0.1); /* Subtle shadow effect */
+      box-shadow: 0px 4px 8px rgb(8, 8, 8) !important; 
+      font-weight: bold !important;
     
     }
+   
     
     .header h1{
         color:#ff6600 !important;
