--- a/Client/src/components/product/Product.css
+++ b/Client/src/components/product/Product.css
@@ -1,6 +1,6 @@
 .gg{
     background-color: #f5f7f8;
-    height:500px;
+   min-height:550px;
     border-radius: 15px;
     
   
@@ -13,6 +13,7 @@
     padding: 10px;
     width:300px;
     border-width: 0px;
+    width:50%;
   
     
 }
