--- a/Client/src/components/footer/Footer.css
+++ b/Client/src/components/footer/Footer.css
@@ -1,62 +1,91 @@
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    list-style-type: none;
-    text-decoration: none;
-}
-footer {
+  }
+  
+  footer {
+    background-color: #f8f9fa;
+    padding: 40px 0;
     border-top: 3px solid #00a8c5;
- 
-}
-
-
-.footer-1 h2 {
-    color: #138808;
-    font-size: 25px;
-
-}
-
-.fot-info h3 {
     color: #333;
+  }
+  
+  .footer-title h2 {
+    color: #138808;
+    font-size: 34px;
+    font-weight: bold;
+  }
+  
+  .footer-title .tagline {
     font-size: 20px;
-    display: inline-block;
-    padding-bottom: 5px;
-    margin-bottom: 20px;
-}
-
-.kk{
-    width: 70vw !important;
-    margin: auto !important;
-}
-.FF{
-    text-align: center !important;
-    margin-bottom: 25px !important;
-}
-
-.fot-info ul li a {
-    font-size: 15px;
-    color: blue;
-    font-weight: 600;
-    
-    text-decoration: none;
-    padding: 5px 0px;
-    display: inline-block;
-    transition: all 0.6s ease;
-}
-
-.fot-info ul li a:hover {
-    padding-left: 5px;
-}
-
-.copyright {
+    color: #555;
+    margin-top: 10px;
+  }
+  
+  .footer-section {
     text-align: center;
-    background-color: #ff7708;
+    margin-bottom: 30px;
+  }
+  
+  .footer-heading {
+    color: #ff7708;
+    font-size: 26px;
+    margin-bottom: 20px;
+    font-weight: bold;
+  }
+  
+  .footer-section ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  
+  .footer-section ul li {
+    margin-bottom: 10px;
+  }
+  
+  .footer-section ul li a {
+    color: #007bff;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: all 0.4s ease;
+  }
+  
+  .footer-section ul li a:hover {
+    color: #0056b3;
+    padding-left: 10px;
+  }
+  
+  .footer-bottom {
+    background-color: #00a8c5;
     color: #fff;
-    padding: 14px 0px;
-    margin: 50px 0px 0px 0px;
-}
-
-
-@media screen and (max-width:950px) {}
-
+    padding: 15px 0;
+    margin-top: 30px;
+  }
+  
+  .footer-bottom p {
+    margin: 0;
+  }
+  
+  @media (max-width: 768px) {
+    .footer-title h2 {
+      font-size: 24px;
+    }
+  
+    .footer-heading {
+      font-size: 20px;
+    }
+  
+    .footer-section ul li a {
+      font-size: 14px;
+    }
+  
+    .footer-bottom {
+      font-size: 14px;
+    }
+  }
+  .fg{
+    font-size: 20px;
+    font-weight: bold;
+  }
